# CppFasta

./: .gitignore  Doxyfile.in  Makefile.am  README.md  configure.ac
src/: Makefile.am  cppfasta.cpp  cppfasta.hpp  cppfasta2.hpp  filereader.cpp  filereader.hpp  filewriter.cpp  filewriter.hpp
test/: .gitignore  Makefile.am  test_fasta.cpp  test_fasta2.cpp  test_fasta_write.cpp  test_filereader.cpp  test_filewriter.cpp
test/data/: DRR000035_101-200.fastq  DRR000035_101-200.fastq.bz2  DRR000035_head100.fastq  DRR000035_head100.fastq.bz2  GCF_000865085.1_ViralMultiSegProj15622_genomic.fna.bz2  Makefile.am  linedata.txt  linedata.txt.bz2
